--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" href="https://hannahlouisebaker.github.io/Adhoc-Website-Bootstrap/about.html">About Us</a>
         </li>     
         <li class="nav-item">
           <a class="nav-link" href="#">Our Team</a>
