--- a/about.html
+++ b/about.html
@@ -1,1 +1,142 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <title>Adhoc</title>
+</head>
+
+<body>
+  <!-- Navbar Component -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#"><img src="https://s3.amazonaws.com/codecademy-content/courses/learn-bootstrap-4/adhoc/logo.png" alt="Adhoc Logo"/></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://hannahlouisebaker.github.io/Adhoc-Website-Bootstrap/about.html">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Our Team</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact Us</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Meet the Team -->
+  <div class="jumbotron jumbotron-fluid" style="background-color: lightblue; no-repeat; background-size: cover;">
+    <div class="row">
+      <div class="col-1">
+      </div>
+      <div class="col-4 my-5 px-5 text-left text-white">
+        <h1 class="display-4">Meet the Team</h1>
+        <h2>Get to know the people behind the screen</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget hendrerit nibh. Aliquam maximus elit quam, eget lobortis velit tincidunt id. Cras orci magna, interdum nec arcu at, ultricies laoreet quam. Quisque accumsan vehicula nulla, at elementum libero posuere vitae. Quisque molestie nisi sed tellus congue, sed ullamcorper nunc maximus. Morbi malesuada fringilla ante, eu egestas lacus cursus et. Sed vitae elit ut mi blandit cursus. Ut eget lectus sit amet elit congue tristique tristique non justo.</p>
+      </div>
+      <div class="col-7">
+        <p class="bg-light">Put a picture here</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Quote -->
+  <div class="container">
+    <!-- Quote Section -->
+    <div class="row" style="background-color: azure;">
+      <div class="col my-5">
+        <h2 class="text-center font-weight-light font-italic">"Phasellus ullamcorper, nibh a pharetra mollis, lectus risus bibendum nisi, in suscipit purus ante id lorem. In ac diam dapibus, tempor ex vitae, dignissim ipsum. Mauris non dapibus est."</h2>
+        <p class="text-center font-weight-bold font-italic">-Dave Ellavar, <span class="font-weight-normal">Academy of Code</span></p>
+      </div>
+    </div>
+    <hr>
+
+    <!-- Image and Text -->
+    <div class="row justify-content-center m-5">
+      <div class="col-6">
+        <p class="text-center">Add photo with overlay text here</p>
+      </div>
+      <div class="col-6" style="background-color: darkblue">
+        <h2 class="text-center display-4 text-white py-5" >Nam feugiat et quam non dictum.</h2>
+      </div>
+    </div>
+
+    <!-- Jumbotron 2 -->
+    <div class="jumbotron jumbotron-fluid" style="background-color: lightblue; no-repeat; background-size: cover;">
+      <div class="row">
+        <div class="col-1">
+        </div>
+        <div class="col-4 my-5 px-5 text-left text-white">
+          <h1 class="display-4">Meet the Team</h1>
+          <h2>Get to know the people behind the screen</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget hendrerit nibh. Aliquam maximus elit quam, eget lobortis velit tincidunt id. Cras orci magna, interdum nec arcu at, ultricies laoreet quam. Quisque accumsan vehicula nulla, at elementum libero posuere vitae. Quisque molestie nisi sed tellus congue, sed ullamcorper nunc maximus. Morbi malesuada fringilla ante, eu egestas lacus cursus et. Sed vitae elit ut mi blandit cursus. Ut eget lectus sit amet elit congue tristique tristique non justo.</p>
+        </div>
+        <div class="col-7">
+          <p class="bg-light">Put a picture here</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Image Carousel -->
+        <!-- Carousel Component -->
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/learn-bootstrap-4/adhoc/andy.png" class="d-block w-100" alt="...">
+              <div class="carousel-caption bg-dark rounded-pill py-0">
+                <p class="font-weight-bold">Morbi quis libero dui. In aliquet eros sed facilisis consequat. Suspendisse hendrerit eros elit, quis imperdiet mi bibendum sit amet.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/learn-bootstrap-4/adhoc/andy.png" class="d-block w-100" alt="Andy C. the CFO">
+              <div class="carousel-caption bg-dark rounded-pill py-0">
+                <p class="font-weight-bold">CFO: <span class="font-weight-light">Andy C.</span></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/learn-bootstrap-4/adhoc/angela.png" class="d-block w-100" alt="Angela W. the COO">
+              <div class="carousel-caption bg-dark rounded-pill py-0">
+                <p class="font-weight-bold">COO: <span class="font-weight-light">Angela W.</span></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/learn-bootstrap-4/adhoc/amie.png" class="d-block w-100" alt="Amie S. the CTO">
+              <div class="carousel-caption bg-dark rounded-pill py-0">
+                <p class="font-weight-bold">CTO: <span class="font-weight-light">Amie S.</span></p>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+  </div>
+
+  <!-- Footer -->
+  <footer class="text-center">2019 Adhoc &copy;</footer>
+
+  <!-- Bootstrap's JavaScript Files -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+</body>
+
+</html>
 
